  13.0.0   F auto                  Becomes internal only

File formats:

  o New option --help-format shows info about supported formats.  (robs)
  o New htk format.  (robs)
  o Fix [1864216] comments mangled when writing ogg-vorbis.  (robs)
  o Fix short noise at end of alsa playback.  (Morita Sho/Tim Munro/robs)
  o Fix wve seek accuracy.  (robs)
  o Fix lpc10 not working.  (robs)
  o For wav & au, fix [548256] size in header wrong when piping out.  (robs)
  o Writing aiff, aifc & dvms now repeatable with -R.  (robs)
  o Writing hcom no longer fails with unsupported rate--chooses
    best match.  (robs)
  o Au/snd: added support for 32-bit integer and 64-bit float PCM
    encoding/decoding; display name of unsupported encoding.  (robs)
  o Can now write .amb (.wav variant) files [FR 1902232].  (robs)
  o Can now read 2,3(2.6),4 bit ADPCM .voc files [FR 1714991].  (robs)

Effects:

  o New `splice' effect; splice together audio sections.  (robs)
  o New `remix' effect; complements the mixer effect.  (robs)
  o New `norm' (normalise) effect.  (robs)
  o Fix crash on 64-bit arch. with tempo & key effects.  (Sami Liedes)
  o Fix synth max. level setting for some output encodings.  (robs)

Other new features:

  o Command line support for multiple file comments.  (robs)
  o Soxi utility to extract/display file header fields.  (robs)
  o Pkg-config support. (Pascal Giard)
  o Basic VU meter.  (robs)
  o Simple heuristic to detect when playing an album and set
    the default replay-gain mode to `album'.  (robs)
  o Better auto-choice of output file format parameters when
    type is different to that of input file.  (robs)
  o SoX now treats (and displays) encoding size & signal precision
    separately.  (robs)

Other bug fixes:

  o Fix [1890983] rec shortcut should apply bit depth (8-bit,
    16-bit, etc.) to input handler.  (robs)

Internal improvements:

  o Use FORTIFY_SOURCE with gcc.  (robs)
  o Fixed all compiler warnings (AFAICT).  (robs)
